@@ -1,3 +1,4 @@
+- fix: add fallback to original if there are no transcode links
 - fix: original taking precedence over override #68
 v0.1.25 (2018-06-12)
 - add STRM creation parameter - skip partial files
